--- a/package.json
+++ b/package.json
@@ -21,5 +21,16 @@
   "bugs": {
     "url": "https://github.com/NastyJack/IG_BOT/issues"
   },
-  "homepage": "https://github.com/NastyJack/IG_BOT#readme"
+  "homepage": "https://github.com/NastyJack/IG_BOT#readme",
+  "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffprobe-installer/ffprobe": "^1.2.0",
+    "axios": "^0.21.1",
+    "base64image-to-file": "^1.2.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "fluent-ffmpeg": "^2.1.2",
+    "gifshot": "^0.4.5",
+    "puppeteer": "^10.2.0"
+  }
 }
