--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A bot to serve endless content to humans",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "test"
   },
   "repository": {
