--- a/package.json
+++ b/package.json
@@ -25,11 +25,10 @@
   "homepage": "https://github.com/NastyJack/IG_BOT#readme",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@ffprobe-installer/ffprobe": "^1.2.0",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fluent-ffmpeg": "^2.1.2",
-    "puppeteer": "^10.2.0"
+    "puppeteer-core": "^10.2.0"
   }
 }
