--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fluent-ffmpeg": "^2.1.2",
-    "puppeteer-core": "^10.2.0"
+    "puppeteer": "^10.2.0"
   }
 }
