--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A bot to serve endless content to humans",
   "main": "app.js",
   "scripts": {
-    "start": "node App.js",
+    "start_tw": "SET NODE_ENV=TEST&&nodemon --ignore 'lib/*.json/*.mp4' --ignore localDb",
+    "start_pw": "SET NODE_ENV=PRODUCTION&&nodemon --ignore 'lib/*.json/*.mp4' --ignore localDb",
+    "start_tl": "export NODE_ENV=TEST&&nodemon --ignore 'lib/*.json/*.mp4' --ignore localDb",
+    "start_pl": "export NODE_ENV=PRODUCTION&&nodemon --ignore 'lib/*.json/*.mp4' --ignore localDb",
     "test": "test"
   },
   "repository": {
