--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ig_bot",
   "version": "1.0.0",
   "description": "A bot to serve endless content to humans",
-  "main": "app.js",
+  "main": "App.js",
   "scripts": {
     "start_tw": "SET NODE_ENV=TEST&&nodemon --ignore 'lib/*.json/*.mp4' --ignore localDb",
     "start_pw": "SET NODE_ENV=PRODUCTION&&nodemon --ignore 'lib/*.json/*.mp4' --ignore localDb",
