--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fluent-ffmpeg": "^2.1.2",
+    "nodemailer": "^6.7.0",
     "puppeteer": "^10.2.0",
     "puppeteer-extra": "^3.1.18"
   }
