--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "fluent-ffmpeg": "^2.1.2",
     "gifshot": "^0.4.5",
-    "puppeteer": "^10.2.0"
+    "puppeteer": "^10.2.0",
+    "qs": "^6.10.3"
   }
 }
